tests/match_orpat_undefined_var.test
let f = fun x -> match x with 
    | `A y
    | `B    -> y
;
####
SyntaxError: Undefined variable
let f = fun x -> match x with 
    | `A y
    | `B    -> y
               ^ 
;
